replace method deprecated in Java 21